# OptiQueryAI

./: .dockerignore  .env  .env.example  .gitignore  DEFERRED.md  README.md  alembic.ini  data_flow_diagram.md  docker-compose.prod.yml  docker-compose.yml  jwt_private.pem  jwt_public.pem  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_18_2105-202606180001_initial_schema.py
app/: main.py
app/agents/: base.py  explanation_agent.py  intent_agent.py  optimization_agent.py  schema_agent.py  sql_generator_agent.py  validation_agent.py
app/api/: admin.py  auth.py  chat.py  connections.py  query.py
app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  audit_log.py  base.py  conversation_history.py  database_connection.py  organization.py  query_history.py  schema_metadata.py  user.py
app/rag/: embedder.py  retriever.py  vector_store.py
app/services/: connection_service.py  encryption.py  execution_service.py  pipeline_service.py
backend/: Dockerfile
frontend/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx
frontend/hooks/: use-query-pipeline.ts
frontend/lib/: api-client.ts  auth.ts
frontend/stores/: auth-store.ts
optiquery_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
seed/: seed.sql
tests/: conftest.py  test_database.py
tests/integration/: test_connections.py  test_pipeline.py
(+131 files in other folders)
