[project]
name = "optiquery-ai"
version = "0.1.0"
description = "OptiQuery AI - A production-grade NL-to-SQL SaaS platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "cryptography==42.0.7",
    "pydantic[email]==2.7.4",
    "pydantic-settings==2.3.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "openai==1.35.3",
    "langchain==0.2.5",
    "sqlglot==23.0.0",
    "httpx==0.27.0",
    "greenlet==3.0.3",
    "aiosqlite==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


